RESOLVED FIXED178322
ASSERTION FAILED: m_truncation != cFullTruncation in InlineTextBox::clampedOffset()
https://bugs.webkit.org/show_bug.cgi?id=178322
Summary ASSERTION FAILED: m_truncation != cFullTruncation in InlineTextBox::clampedOf...
Daniel Bates
Reported 2017-10-15 15:08:03 PDT
Following <https://trac.webkit.org/changeset/223259> (bug #178032), clicking on the ellipsis in a truncated text run causes ASSERT(m_truncation != cFullTruncation) to fail in InlineTextBox::clampedOffset(). ASSERTION FAILED: m_truncation != cFullTruncation /Users/.../Source/WebCore/rendering/InlineTextBox.cpp(594) : unsigned int WebCore::InlineTextBox::clampedOffset(unsigned int) const 1 0x104404a6d WTFCrash 2 0x10d52e701 WebCore::InlineTextBox::clampedOffset(unsigned int) const 3 0x10d5353d2 WebCore::InlineTextBox::positionForOffset(unsigned int) const 4 0x10eb8b1bb WebCore::RenderText::localCaretRect(WebCore::InlineBox*, unsigned int, WebCore::LayoutUnit*) 5 0x10f306aef WebCore::VisiblePosition::localCaretRect(WebCore::RenderObject*&) const 6 0x10cdf8f04 WebCore::localCaretRectInRendererForCaretPainting(WebCore::VisiblePosition const&, WebCore::RenderBlock*&) 7 0x10d07b06e WebCore::CaretBase::updateCaretRect(WebCore::Document*, WebCore::VisiblePosition const&) 8 0x10d08343b WebCore::FrameSelection::recomputeCaretRect() 9 0x10d07c99f WebCore::FrameSelection::updateAppearance() 10 0x10d07c734 WebCore::FrameSelection::updateAndRevealSelection(WebCore::AXTextStateChangeIntent const&) 11 0x10d07a6e1 WebCore::FrameSelection::setSelection(WebCore::VisibleSelection const&, unsigned int, WebCore::AXTextStateChangeIntent, WebCore::FrameSelection::CursorAlignOnScroll, WebCore::TextGranularity) 12 0x10d07b53c WebCore::FrameSelection::setSelectionByMouseIfDifferent(WebCore::VisibleSelection const&, WebCore::TextGranularity, WebCore::FrameSelection::EndPointsAdjustmentMode) 13 0x10ce70940 WebCore::EventHandler::updateSelectionForMouseDownDispatchingSelectStart(WebCore::Node*, WebCore::VisibleSelection const&, WebCore::TextGranularity) 14 0x10ce71c4f WebCore::EventHandler::handleMousePressEventSingleClick(WebCore::MouseEventWithHitTestResults const&) 15 0x10ce723b2 WebCore::EventHandler::handleMousePressEvent(WebCore::MouseEventWithHitTestResults const&) 16 0x10ce776ce WebCore::EventHandler::handleMousePressEvent(WebCore::PlatformMouseEvent const&) 17 0x10ce890d5 WebCore::EventHandler::mouseDown(NSEvent*, NSEvent*) 18 0x102493349 -[WebHTMLView mouseDown:] 19 0x101ace500 -[EventSendingController mouseDown:withModifiers:] 20 0x7fffbabbe0cc __invoking___ 21 0x7fffbabbdf51 -[NSInvocation invoke] 22 0x10e6e2d65 JSC::Bindings::ObjcInstance::invokeObjcMethod(JSC::ExecState*, JSC::Bindings::ObjcMethod*) 23 0x10e6e24aa JSC::Bindings::ObjcInstance::invokeMethod(JSC::ExecState*, JSC::RuntimeMethod*) 24 0x10ec82786 JSC::callRuntimeMethod(JSC::ExecState*) 25 0x103d5f6ea JSC::LLInt::handleHostCall(JSC::ExecState*, JSC::Instruction*, JSC::JSValue, JSC::CodeSpecializationKind) 26 0x103d5aa1d JSC::LLInt::setUpCall(JSC::ExecState*, JSC::Instruction*, JSC::CodeSpecializationKind, JSC::JSValue, JSC::LLIntCallLinkInfo*) 27 0x103d59ce4 JSC::LLInt::genericCall(JSC::ExecState*, JSC::Instruction*, JSC::CodeSpecializationKind) 28 0x103d59bd3 llint_slow_path_call 29 0x102fd6a7f llint_entry 30 0x102fd6a91 llint_entry 31 0x102fcee57 vmEntryToJavaScript
Attachments
Patch and layout test (4.17 KB, patch)
2017-10-15 15:30 PDT, Daniel Bates
no flags
Daniel Bates
Comment 1 2017-10-15 15:30:20 PDT
Created attachment 323851 [details] Patch and layout test
Daniel Bates
Comment 2 2017-10-17 10:14:00 PDT
Comment on attachment 323851 [details] Patch and layout test Clearing flags on attachment: 323851 Committed r223553: <https://trac.webkit.org/changeset/223553>
Daniel Bates
Comment 3 2017-10-17 10:14:02 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-10-17 10:15:05 PDT
Note You need to log in before you can comment on or make changes to this bug.